[workspace]
resolver = "2"
members = [
    "pyaco",
    "pyaco-node",
    "pyaco-generate",
    "pyaco-core",
    "pyaco-macro",
    "pyaco-validate",
]

[workspace.package]
authors = ["Kévin COMBRIAT <kevin@sc0ville.com>"]
rust-version = "1.68.2"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
async-trait = "0.1.81"
clap = { version = "4.3.24", features = ["derive"] }
compact_str = "0.8.0"
convert_case = "0.6.0"
cssparser = "0.34.0"
dunce = "1.0.5"
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
glob = "0.3.1"
grep-matcher = "0.1.7"
grep-regex = "0.1.12"
grep-searcher = "0.1.13"
napi = { version = "2.16.8", features = ["serde-json", "tokio_rt"] }
napi-derive = "2.16.10"
notify = "6.1.1"
notify-debouncer-mini = { version = "0.4.1", default-features = false }
once_cell = "1.19.0"
proc-macro-error = "1.0.4"
pyaco-core = { path = "./pyaco-core" }
pyaco-generate = { path = "./pyaco-generate" }
pyaco-validate = { path = "./pyaco-validate" }
quote = "1.0.36"
regex = "1.10.6"
serde = { version = "1.0.205", features = ["derive"] }
syn = "2.0.72"
thiserror = "1.0.63"
toml = "0.8.19"
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = "2.10.0"
url = "2.5.2"
